css/experience-style.css
* {
    margin: 0px;
    padding: 0px;
    box-sizing: border-box;
    list-style: none;
}

body {
    font-family: Signika, sans-serif;
}

/***** NAVBAR STYLING *****/

.navbar {
    background-color: #f0f6de !important; /* background color requires !imp tag */
}

/* "kathleen nguyen esfahany" on left corner of nav" */
.navbar-brand {
    letter-spacing: 1.5px;
    font-weight: 400;
    font-size: 20px;
}

.nav-item {
    letter-spacing: 0.7px;
    font-weight: 300 !important;
    font-size: 18px;
    padding-right: 30px !important;
}

.active {
    font-weight: 400 !important;
}

/***** EXPERIENCE PAGE *****/

/* text on top containing tags and link to linkedin */
.linkedin {
    max-width: 650px;
    margin: auto;
}

.linkedin-text {
    font-size: 16px;
    font-weight: 300;
    padding: 5px 0px;
    letter-spacing: 0.7px;
    line-height: 1.5em;
}

.linkedin-text a{
    color: #0075BA;
    font-weight: 400;
}

.linkedin-text a:hover{
    color: #0075BA;
    text-decoration: none;
}

/* currently and previously headers */
.section-header {
    max-width: 650px;
    font-size: 18px;
    font-weight: 500;
    margin: auto;
    letter-spacing: 0.7px;
}

/* container for entire timeline */
.timeline {
    position: relative;
    max-width: 630px; /* affects the width of the whole timeline, boxes included */
    margin: auto;
}

/* the actual timeline bar (the vertical line) */
    /* accomplished using an "after" positioned relative to the leftmost side of the box */
.timeline::after {
    content: '';
    position: absolute;
    width: 3px;
    background-color: #80ABC7;
    top: 10px;
    bottom: 10px;
    left: 20px;
    margin-left: -3px;
}

/* container around content */
.container {
    padding: 10px 50px; /* v, h padding within container */
    position: relative;
    background-color: inherit;
    width: 100%;
    height: fit-content;
}

/* circle on timeline bar */
.container::after {
    box-shadow: 2px 3px #80ABC7; /* right, down */
    content: '';
    position: absolute;
    width: 25px;
    height: 25px;

    left:  6px;
    background-color: #f0f6de;
    border: 1.5px solid #80ABC7;

    top: 25px;
    border-radius: 50%;
    z-index: 1;
}

/* the actual content */
.content {
    box-shadow: 5px 5px #80ABC7;
    padding: 1px 10px; /*within the content box; vertical, horizontal*/
    padding-top: 5px;
    padding-bottom: 10px;
    position: relative;
    border-radius: 6px;
    border-style:solid;
    border-width: 1.5px;
    border-color: #80ABC7;
    height: fit-content;
}

p {
    margin: 0;
}

/* role and tag */
.top-panel {
    min-height: 20px;
    vertical-align: center;
}

.top-panel-br {
    display: none;
}

.mid-panel {
    min-height: 20px;
    vertical-align: center;
}


.role-title {
    font-size: 20px;
    font-weight: 400;
    letter-spacing: 0.7px;
}

.company-name{
    font-size: 16px;
    font-weight: 300;
    letter-spacing: 0.9px;
    color: grey;
}

.date {
    font-weight: 300;
    font-size: 12px;
    padding-top: 4px;
    color: grey;
    float: right;
}

.description {
    font-size: 14px;
    font-weight: 300;
    padding-top: 10px;
    letter-spacing: 0.7px;
    line-height: 1.3em;
}

.description p {
    padding-bottom: 5px;
}

.description a{
    color: #0075BA;
    font-weight: 400;
}

.description a:hover{
    color: #0075BA;
    text-decoration: none;
}

.tag {
    float: right;
    position: relative;
    top: 5px; /* center aligning relative to role title */
    font-size: 14px;
    font-weight: 300;
    border-style: solid;
    border-width: 1px;
    border-radius: 3px;
    border-color: grey;
    width: fit-content;
    padding: 0px 4px;
    color: black;
}

/* linkedin section */
.header-tag {
    font-size: 15px;
    font-weight: 300;
    border-style: solid;
    border-width: 1px;
    border-radius: 3px;
    border-color: grey;
    width: fit-content;
    padding: 1px 4px;
    color: black;
}

/* colors for tags */
.swe {
    background-color: #DADBE7;
}

.research {
    background-color: #C4E4E9;
}

.writing {
    background-color: #E1F1DC;
}

.policy {
    background-color: #F7ECCA;
}

li {
    display: list-item;
}


/* Media queries - Responsive timeline on screens less than 600px wide */
@media screen and (max-width: 775px) {
/* Place the timelime to the left */
    .timeline {
        max-width: 450px;
    }
    .linkedin {
        max-width: 450px;
        padding-left: 10px;
    }
    
    .section-header {
        max-width: 450px;
        padding-left: 10px;
    }

    /* changing the top panel of each card on smaller screens */

    .tag{
        float: left;
        top: 0px;
    }
    .top-panel-br {
        display: block;
    }

    .date {
        float: left;
    }

    .mid-panel {
        padding-top: 10px;
    }

}

